@@ -1,4 +1,4 @@
-.TH DAR 1 "March. 3rd, 2012"
+.TH DAR 1 "Jan. 6th, 2013"
 .UC 8
 .SH NAME
 dar \- create, test, list, extract, compare, merge, isolate  dar archives
@@ -640,7 +640,7 @@ When a file has changed at the time it was read for backup, you can ask dar to r
 This flag is to be used only when merging two archives. Instead of the usual merging where each files of both archives are added to the resulting archive with eventually a tie using the overwriting policy (see -/ option), here the merging builds an archive which corresponds to the decremental backup done based on two full backups. the -A backup is expected to receive the older archive while the -@ is expected to point to the more recent one. If this option is used, the eventually overwriting policy is ignored and replaced by -/ "{T&R&~R&(A|!H)}[S*] P* ; {(e&~e&r&~r)|(!e&!~e)}[*s] *p". Additionally, files found int the newer archive that do not existed in the older are replaced by a 'detruit' entry, which marks them to be remove at restoration time. For more information about decremental backups read the usage_notes.html file in the documentation.
 .TP 20
 -asecu, --alter=secu
-This option disable the ctime check done by default during an incremental backup: If the ctime of an inode has changed since the archive of reference was done with all other values being unchanged (inode type, ownership, permission, last modification date, file size), dar issues a "SECURITY WARNING", as this may be the sign of the presence of a rootkit. You should use this option to disable this type of warning, if you are doing a differential backup of a just restored data (differential backup with the archive used for restoration taken as reference), as it is not possible to restore ctime, restored data's ctime will have changed while other parameters will be unchanged for all restored files, leading dar to issue a warning for all restored files. This security check is disabled (implicitly) if dar is run with -ac option. Last, if a file has only its EA changed since the archive of reference was done, the security warning will show (false positive).
+This option disable the ctime check done by default during an incremental backup: If the ctime of an plain file has changed since the archive of reference was done while all other values stay unchanged (inode type, ownership, permission, last modification date), dar issues a "SECURITY WARNING", as this may be the sign of the presence of a rootkit. You should use the -asecu option to disable this type of warning globally, if you are doing a differential backup of a just restored data (a differential backup with the archive used for restoration taken as reference). Effectively in that situation, as it is not possible to restore ctime, the restored data's ctime will have changed while other parameters will be unchanged for all restored files, leading dar to issue a warning for all restored files. This security check is disabled (implicitly) if dar is run with -ac option. Last, if a file has only its EA changed since the archive of reference was done (new EA, removed EA, modified EA), the security warning will show (false positive).
 .TP 20
 -., --user-comment "<message>"
 This option let the user add an arbitrary message into the archive header. Warning! this message is always stored in clear text, even if the archive is encrypted. You can see the message inserted in an archive displaying the archive summary (dar -l <archive> -q). Some macro can be used inside the <message>:
